update index file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>GitHub</title>
   </head>
   <body>
+    <ul>
+      <li>Home</li>
+      <li>About</li>
+      <li>Contact</li>
+    </ul>
     <h1>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, porro
       explicabo? Magni quibusdam odio nesciunt eligendi, fugit earum quod, sunt,
