update header file

--- a/header.html
+++ b/header.html
@@ -1,1 +1,22 @@
 <header>This is heading of page</header>
+<div class="container">
+  <div class="content">
+    <div class="text">
+      <h1>Web Design Courses</h1>
+      <p>
+        Web design refers to the design, creation, and maintenance of websites.
+        The terms web design and web development are often used interchangeably,
+        however, web design typically refers to the front-end (client side) of a
+        website, which includes its appearance, layout, and content. Web design
+        involves a range of tasks, including graphic design, user interface (UI)
+        design, user experience (UX) design, and search engine optimization.
+        Successful Web Designers typically have a strong understanding of HTML,
+        CSS, and JAVA, as well as UX design and UI design principles.
+      </p>
+    </div>
+    <div class="image">
+      <img src="image.png" alt="Web Design Course Image" />
+      <div class="highlight-box"></div>
+    </div>
+  </div>
+</div>
