--- a/feature.html
+++ b/feature.html
@@ -1,6 +1,7 @@
 <ul>
   <li><a href="#home">Home</a></li>
   <li><a href="#news">News</a></li>
+  ui enhanced  .......................
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Dropdown</a>
     <div class="dropdown-content">
